--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,11 +27,11 @@ spec:
         name: whoami
         resources:
           limits:
-            cpu: 100m
-            memory: 5Gi
+            cpu: 5
+            memory: 1Gi
           requests:
-            cpu: 100m
-            memory: 5Gi
+            cpu: 5
+            memory: 1Gi
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
