--- a/env2/deployment.yaml
+++ b/env2/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: whoami
         test: sh
         hello: world
+        env: 2
     spec:
       containers:
       - image: traefik/whoami:latest
