--- a/env1/deployment.yaml
+++ b/env1/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         test: sh
     spec:
       containers:
-      - image: paulbouwer/hello-kubernetes:latest
+      - image: paulbouwer/hello-kubernetes:1.10.1
         imagePullPolicy: Always
         name: whoami
         resources:
