--- a/env1/deployment.yaml
+++ b/env1/deployment.yaml
@@ -35,5 +35,6 @@ spec:
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: {}
+      securityContext: 
+        runAsUser: 1000
       terminationGracePeriodSeconds: 30
