Use envFrom configmap

--- a/env1/deployment.yaml
+++ b/env1/deployment.yaml
@@ -32,12 +32,9 @@ spec:
           requests:
             cpu: 500m
             memory: 250Mi
-        env:
-          - name: TOPIC
-            valueFrom:
-              configMapKeyRef:
-                name: data
-                key: topic
+        envFrom:
+        - configMapRef:
+            name: data
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
