--- a/env1/statefulset.yaml
+++ b/env1/statefulset.yaml
@@ -7,6 +7,7 @@ metadata:
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes-statefulset
 spec:
+  serviceName: "hello-kubernetes-statefulset"
   replicas: 3
   selector:
     matchLabels:
