--- a/env1/templates/deployment.yaml
+++ b/env1/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes
 spec:
-  replicas: 3
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-kubernetes
