--- a/env1/templates/deployment.yaml
+++ b/env1/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes
   annotations:
-    replicaPath: "env1.really_long_reference_to_go_over_sixty_three_chars.deployment.replicaCount"
+    replicaPath: "deployment.replicaCount"
 spec:
   replicas: {{ .Values.deployment.replicaCount }}
   selector:
