--- a/env1/templates/deployment.yaml
+++ b/env1/templates/deployment.yaml
@@ -7,9 +7,9 @@ metadata:
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes
   annotations:
-    replicaPath: "deployment.replicaCount"
+    replicaPath: "replicaCount"
 spec:
-  replicas: {{ .Values.deployment.replicaCount }}
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-kubernetes
@@ -44,6 +44,6 @@ spec:
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: 
+      securityContext:
         runAsUser: 1000
       terminationGracePeriodSeconds: 30
