--- a/env1/templates/statefulset.yaml
+++ b/env1/templates/statefulset.yaml
@@ -7,10 +7,10 @@ metadata:
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes-statefulset
   annotations:
-    replicaPath: "statefulset.replicaCount"
+    replicaPath: "replicaCount"
 spec:
   serviceName: "hello-kubernetes-statefulset"
-  replicas: {{ .Values.statefulset.replicaCount }}
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-kubernetes-statefulset
@@ -40,6 +40,6 @@ spec:
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
-      securityContext: 
+      securityContext:
         runAsUser: 1000
       terminationGracePeriodSeconds: 30
