--- a/env1/templates/deployment.yaml
+++ b/env1/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- range $index, $value := until 2 }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,11 +6,62 @@ metadata:
     app: hello-kubernetes
     test: sh
     kaluzaplatform.net/mi-scale-in: "true"
-  name: hello-kubernetes
+  name: hello-kubernetes-{{ $index }}
+  namespace: argocd-sync
   annotations:
     replicaPath: "replicaCount"
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app: hello-kubernetes
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: hello-kubernetes
+        test: sh
+    spec:
+      containers:
+      - image: paulbouwer/hello-kubernetes:1.10.1
+        imagePullPolicy: Always
+        name: whoami
+        resources:
+          limits:
+            cpu: 500m
+            memory: 250Mi
+          requests:
+            cpu: 500m
+            memory: 250Mi
+        env:
+        - name: FOO
+          value: "678"
+        envFrom:
+        - configMapRef:
+            name: data
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext:
+        runAsUser: 1000
+      terminationGracePeriodSeconds: 30
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: hello-kubernetes
+    test: sh
+    kaluzaplatform.net/mi-scale-in: "true"
+  name: hello-kubernetes-3
+  annotations:
+    replicaPath: "deployment.replicaCount"
+spec:
+  replicas: {{ .Values.deployment.replicaCount }}
   selector:
     matchLabels:
       app: hello-kubernetes
