--- a/env1/templates/statefulset.yaml
+++ b/env1/templates/statefulset.yaml
@@ -6,6 +6,7 @@ metadata:
     test: sh
     kaluzaplatform.net/mi-scale-in: "true"
   name: hello-kubernetes-statefulset
+  namespace: argocd-sync
   annotations:
     replicaPath: "replicaCount"
 spec:
