corrected reference to chart value

--- a/env1/templates/deployment.yaml
+++ b/env1/templates/deployment.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     replicaPath: "replicaCount"
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ $.Values.replicaCount }}
   selector:
     matchLabels:
       app: hello-kubernetes
