--- a/env1/templates/statefulset.yaml
+++ b/env1/templates/statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
   name: hello-kubernetes-statefulset
   namespace: argocd-sync
   annotations:
-    replicaPath: "replicaCount"
+    kaluzaplatform.net/replica-path: "replicaCount"
 spec:
   serviceName: "hello-kubernetes-statefulset"
   replicas: {{ .Values.replicaCount }}
